--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,6 +3,9 @@ name: Create new version
 on:
   push:
     branches: ['main', 'beta', 'alpha']
+permissions:
+  contents: write
+  packages: write
 
 jobs:
   luacheck:
@@ -25,7 +28,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          persist-credentials: false
+          persist-credentials: true
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
@@ -35,7 +38,7 @@ jobs:
           npm install semantic-release @semantic-release/git @semantic-release/changelog -D
       - name: Create new version
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GIT_AUTHOR_NAME: ${{ github.event.pusher.name }}
           GIT_AUTHOR_EMAIL: ${{ github.event.pusher.email }}
         run: |
